xee-xpath-ast/src/parser.rs
use chumsky::input::Stream;
use chumsky::{extra::Full, input::ValueInput, prelude::*};
use ordered_float::OrderedFloat;
use std::borrow::Cow;
use std::iter::once;

use crate::error::{Error, Result};
use crate::lexer::{lexer, Token};
use crate::namespaces::Namespaces;
use crate::span::WithSpan;
use crate::FN_NAMESPACE;

use crate::ast;
use crate::ast::unique_names;
use crate::ast::Span;

const RESERVED_FUNCTION_NAMES: [&str; 18] = [
    "array",
    "attribute",
    "comment",
    "document-node",
    "element",
    "empty-sequence",
    "function",
    "if",
    "item",
    "map",
    "namespace-node",
    "node",
    "processing-instruction",
    "schema-attribute",
    "schema-element",
    "switch",
    "text",
    "typeswitch",
];

pub(crate) struct State<'a> {
    namespaces: Cow<'a, Namespaces<'a>>,
}

pub(crate) type Extra<'a, T> = Full<Rich<'a, T>, State<'a>, ()>;

type BoxedParser<'a, I, T> = Boxed<'a, 'a, I, T, Extra<'a, Token<'a>>>;

#[derive(Clone)]
struct ParserNameOutput<'a, I>
where
    I: ValueInput<'a, Token = Token<'a>, Span = Span>,
{
    eqname: BoxedParser<'a, I, ast::NameS>,
    ncname: BoxedParser<'a, I, &'a str>,
    braced_uri_literal: BoxedParser<'a, I, &'a str>,
}

fn parser_name<'a, I>() -> ParserNameOutput<'a, I>
where
    I: ValueInput<'a, Token = Token<'a>, Span = Span>,
{
    let ncname = select! {
        Token::NCName(s) => s,

    }
    .boxed();

    let ncname = ncname.clone().or(parser_keyword()).boxed();

    let braced_uri_literal = select! {
        Token::BracedURILiteral(s) => s,
    }
    .boxed();

    let prefixed_name = ncname
        .clone()
        .then_ignore(just(Token::Colon))
        .then(ncname.clone())
        .try_map_with_state(|(prefix, local_name), span, state: &mut State| {
            ast::Name::prefixed(prefix, local_name, state.namespaces.as_ref())
                .map(|name| name.with_span(span))
                .ok_or_else(|| Rich::custom(span, format!("Unknown prefix: {}", prefix)))
        })
        .boxed();

    let qname = prefixed_name
        .or(ncname
            .clone()
            .map_with_span(|local_name, span| ast::Name::unprefixed(local_name).with_span(span)))
        .boxed();

    let uri_qualified_name = braced_uri_literal
        .clone()
        .then(ncname.clone())
        .map_with_span(|(uri, local_name), span| {
            ast::Name::uri_qualified(uri, local_name).with_span(span)
        })
        .boxed();

    let eqname = qname.or(uri_qualified_name).boxed();

    ParserNameOutput {
        eqname,
        ncname,
        braced_uri_literal,
    }
}

#[derive(Clone)]
struct ParserKindTestOutput<'a, I>
where
    I: ValueInput<'a, Token = Token<'a>, Span = Span>,
{
    kind_test: BoxedParser<'a, I, ast::KindTest>,
}

fn parser_kind_test<'a, I>(
    eqname: BoxedParser<'a, I, ast::NameS>,
    empty_call: BoxedParser<'a, I, Token<'a>>,
    ncname: BoxedParser<'a, I, &'a str>,
    string: BoxedParser<'a, I, Cow<'a, str>>,
) -> ParserKindTestOutput<'a, I>
where
    I: ValueInput<'a, Token = Token<'a>, Span = Span>,
{
    let element_declaration = eqname.clone();
    let schema_element_test = just(Token::SchemaElement)
        .ignore_then(
            element_declaration.delimited_by(just(Token::LeftParen), just(Token::RightParen)),
        )
        .map(|name| ast::SchemaElementTest { name })
        .boxed();

    let element_name_or_wildcard = just(Token::Asterisk)
        .to(ast::ElementNameOrWildcard::Wildcard)
        .or(eqname
            .clone()
            .map_with_state(|name, _span, state: &mut State| {
                // use default element namespace; we can do this without worrying
                // about context, as it's an element name test
                ast::ElementNameOrWildcard::Name(name.map(|name| {
                    name.with_default_namespace(state.namespaces.default_element_namespace)
                }))
            }))
        .boxed();

    let type_name = eqname.clone();

    let element_type_name = type_name
        .clone()
        .then(just(Token::QuestionMark).or_not())
        .map(|(name, question_mark)| ast::ElementTypeName {
            name,
            optional: question_mark.is_some(),
        })
        .boxed();

    let element_test_content = element_name_or_wildcard
        .then((just(Token::Comma).ignore_then(element_type_name)).or_not())
        .map(|(element_name_or_wildcard, type_name)| ast::ElementTest {
            element_name_or_wildcard,
            type_name,
        })
        .boxed();

    let element_test = just(Token::Element)
        .ignore_then(
            element_test_content
                .or_not()
                .delimited_by(just(Token::LeftParen), just(Token::RightParen)),
        )
        .boxed();

    let document_test_content = element_test
        .clone()
        .map(ast::DocumentTest::Element)
        .or(schema_element_test
            .clone()
            .map(ast::DocumentTest::SchemaElement))
        .boxed();

    let document_test = just(Token::DocumentNode)
        .ignore_then(
            document_test_content
                .or_not()
                .delimited_by(just(Token::LeftParen), just(Token::RightParen)),
        )
        .boxed();

    let attrib_name_or_wildcard = just(Token::Asterisk)
        .to(ast::AttribNameOrWildcard::Wildcard)
        .or(eqname.clone().map(ast::AttribNameOrWildcard::Name))
        .boxed();

    let attribute_test_content = attrib_name_or_wildcard
        .then((just(Token::Comma).ignore_then(type_name)).or_not())
        .map(|(attrib_name_or_wildcard, type_name)| ast::AttributeTest {
            attrib_name_or_wildcard,
            type_name,
        })
        .boxed();

    let attribute_test = just(Token::Attribute)
        .ignore_then(
            attribute_test_content
                .or_not()
                .delimited_by(just(Token::LeftParen), just(Token::RightParen)),
        )
        .boxed();

    let any_test = just(Token::Node)
        .ignore_then(empty_call.clone())
        .to(ast::KindTest::Any)
        .boxed();

    let attribute_name = eqname.clone();
    let attribute_declaration = attribute_name;
    let schema_attribute_test = just(Token::SchemaAttribute)
        .ignore_then(
            attribute_declaration.delimited_by(just(Token::LeftParen), just(Token::RightParen)),
        )
        .map(|name| ast::SchemaAttributeTest { name })
        .boxed();

    let pi_test_content = ncname
        .clone()
        .map(|s| ast::PITest::Name(s.to_string()))
        .or(string.map(|s| ast::PITest::StringLiteral(s.to_string())))
        .boxed();

    let pi_test = just(Token::ProcessingInstruction)
        .ignore_then(
            pi_test_content
                .or_not()
                .delimited_by(just(Token::LeftParen), just(Token::RightParen)),
        )
        .boxed();

    let text_test = just(Token::Text)
        .ignore_then(empty_call.clone())
        .to(ast::KindTest::Text);
    let comment_test = just(Token::Comment)
        .ignore_then(empty_call.clone())
        .to(ast::KindTest::Comment);
    let namespace_node_test = just(Token::NamespaceNode)
        .ignore_then(empty_call.clone())
        .to(ast::KindTest::NamespaceNode);

    let kind_test = document_test
        .map(ast::KindTest::Document)
        .or(element_test.map(ast::KindTest::Element))
        .or(attribute_test.map(ast::KindTest::Attribute))
        .or(schema_element_test.map(ast::KindTest::SchemaElement))
        .or(schema_attribute_test.map(ast::KindTest::SchemaAttribute))
        .or(pi_test.map(ast::KindTest::PI))
        .or(comment_test)
        .or(text_test)
        .or(namespace_node_test)
        .or(any_test)
        .boxed();

    ParserKindTestOutput { kind_test }
}

#[derive(Clone)]
struct ParserTypeOutput<'a, I>
where
    I: ValueInput<'a, Token = Token<'a>, Span = Span>,
{
    sequence_type: BoxedParser<'a, I, ast::SequenceType>,
    single_type: BoxedParser<'a, I, ast::SingleType>,
}

fn parser_type<'a, I>(
    eqname: BoxedParser<'a, I, ast::NameS>,
    empty_call: BoxedParser<'a, I, Token<'a>>,
    kind_test: BoxedParser<'a, I, ast::KindTest>,
) -> ParserTypeOutput<'a, I>
where
    I: ValueInput<'a, Token = Token<'a>, Span = Span>,
{
    let single_type = eqname
        .clone()
        .then(just(Token::QuestionMark).or_not())
        .map_with_span(|(name, question_mark), _span| ast::SingleType {
            name,
            optional: question_mark.is_some(),
        })
        .boxed();

    let empty = just(Token::EmptySequence)
        .ignore_then(empty_call.clone())
        .to(ast::SequenceType::Empty)
        .boxed();

    let item_type_kind_test = kind_test.clone().map(ast::ItemType::KindTest);
    let item_type_empty = just(Token::Item)
        .ignore_then(empty_call.clone())
        .to(ast::ItemType::Item)
        .boxed();
    let item_type_atomic_or_union = eqname.clone().map(ast::ItemType::AtomicOrUnionType);
    let item_type = recursive(|item_type| {
        let parenthesized_item_type =
            item_type.delimited_by(just(Token::LeftParen), just(Token::RightParen));
        item_type_empty
            .or(item_type_kind_test)
            .or(item_type_atomic_or_union)
            .or(parenthesized_item_type)
    })
    .boxed();

    let occurrence = one_of([Token::QuestionMark, Token::Asterisk, Token::Plus])
        .map(|c| match c {
            Token::QuestionMark => ast::Occurrence::Option,
            Token::Asterisk => ast::Occurrence::Many,
            Token::Plus => ast::Occurrence::NonEmpty,
            _ => unreachable!(),
        })
        .or_not()
        .map(|o| o.unwrap_or(ast::Occurrence::One))
        .boxed();

    let item = item_type
        .clone()
        .then(occurrence)
        .map(|(item_type, occurrence)| ast::Item {
            item_type,
            occurrence,
        })
        .boxed();

    let sequence_type = empty.or(item.map(ast::SequenceType::Item)).boxed();

    ParserTypeOutput {
        sequence_type,
        single_type,
    }
}

#[derive(Clone)]
struct ParserAxisNodeTestOutput<'a, I>
where
    I: ValueInput<'a, Token = Token<'a>, Span = Span>,
{
    axis_node_test: BoxedParser<'a, I, (ast::Axis, ast::NodeTest)>,
}

fn parser_axis_node_test<'a, I>(
    eqname: BoxedParser<'a, I, ast::NameS>,
    ncname: BoxedParser<'a, I, &'a str>,
    braced_uri_literal: BoxedParser<'a, I, &'a str>,
    kind_test: BoxedParser<'a, I, ast::KindTest>,
) -> ParserAxisNodeTestOutput<'a, I>
where
    I: ValueInput<'a, Token = Token<'a>, Span = Span>,
{
    let wildcard_prefix = ncname
        .clone()
        .then_ignore(just(Token::ColonAsterisk))
        .try_map_with_state(|prefix, span, state: &mut State| {
            let namespace = state
                .namespaces
                .by_prefix(prefix)
                .ok_or_else(|| Rich::custom(span, format!("Unknown prefix: {}", prefix)))?;
            Ok(ast::NameTest::Namespace(namespace.to_string()))
        })
        .boxed();
    let wildcard_braced_uri_literal = braced_uri_literal
        .then_ignore(just(Token::Asterisk))
        .map(|uri| ast::NameTest::Namespace(uri.to_string()))
        .boxed();
    let wildcard_localname = just(Token::AsteriskColon)
        .ignore_then(ncname.clone())
        .map(|name| ast::NameTest::LocalName(name.to_string()))
        .boxed();
    let wildcard_star = just(Token::Asterisk).to(ast::NameTest::Star).boxed();

    let name_test_wildcard = wildcard_prefix
        .or(wildcard_braced_uri_literal)
        .or(wildcard_localname)
        .or(wildcard_star)
        .boxed();

    // element names are in the the default element namespace
    let name_test_element_name = eqname
        .clone()
        .map_with_state(|name, _span, state: &mut State| {
            ast::NameTest::Name(name.map(|name| {
                name.with_default_namespace(state.namespaces.default_element_namespace)
            }))
        })
        .boxed();
    // attribute names are not in the default element namespace
    let name_test_attribute_name = eqname.clone().map(ast::NameTest::Name).boxed();

    // we need to duplicate the sub-parsers for the element and attribute cases
    let name_test_element = name_test_wildcard
        .clone()
        .or(name_test_element_name.clone())
        .boxed();
    let name_test_attribute = name_test_wildcard
        .or(name_test_attribute_name.clone())
        .boxed();

    let parent_axis = just(Token::Parent)
        .ignore_then(just(Token::DoubleColon))
        .to(ast::Axis::Parent);
    let ancestor_axis = just(Token::Ancestor)
        .ignore_then(just(Token::DoubleColon))
        .to(ast::Axis::Ancestor);
    let preceding_sibling_axis = just(Token::PrecedingSibling)
        .ignore_then(just(Token::DoubleColon))
        .to(ast::Axis::PrecedingSibling);
    let preceding_axis = just(Token::Preceding)
        .ignore_then(just(Token::DoubleColon))
        .to(ast::Axis::Preceding);
    let ancestor_or_self_axis = just(Token::AncestorOrSelf)
        .ignore_then(just(Token::DoubleColon))
        .to(ast::Axis::AncestorOrSelf);

    let reverse_axis = choice::<_>([
        parent_axis,
        ancestor_axis,
        preceding_sibling_axis,
        preceding_axis,
        ancestor_or_self_axis,
    ])
    .boxed();

    let node_test_element_name = kind_test
        .clone()
        .map(ast::NodeTest::KindTest)
        .or(name_test_element.clone().map(ast::NodeTest::NameTest))
        .boxed();
    let node_test_attribute_name = kind_test
        .clone()
        .map(ast::NodeTest::KindTest)
        .or(name_test_attribute.map(ast::NodeTest::NameTest))
        .boxed();

    let abbrev_reverse_step = just(Token::DotDot).to((
        ast::Axis::Parent,
        ast::NodeTest::KindTest(ast::KindTest::Any),
    ));

    // the reverse axis only allows element tests
    let reverse_axis_with_node_test = reverse_axis.then(node_test_element_name.clone()).boxed();
    let reverse_step = reverse_axis_with_node_test.or(abbrev_reverse_step).boxed();

    let child_axis = just(Token::Child)
        .ignore_then(just(Token::DoubleColon))
        .to(ast::Axis::Child);
    let descendant_axis = just(Token::Descendant)
        .ignore_then(just(Token::DoubleColon))
        .to(ast::Axis::Descendant);
    let attribute_axis = just(Token::Attribute)
        .ignore_then(just(Token::DoubleColon))
        .to(ast::Axis::Attribute);
    let self_axis = just(Token::Self_)
        .ignore_then(just(Token::DoubleColon))
        .to(ast::Axis::Self_);
    let descendant_or_self_axis = just(Token::DescendantOrSelf)
        .ignore_then(just(Token::DoubleColon))
        .to(ast::Axis::DescendantOrSelf);
    let following_sibling_axis = just(Token::FollowingSibling)
        .ignore_then(just(Token::DoubleColon))
        .to(ast::Axis::FollowingSibling);
    let following_axis = just(Token::Following)
        .ignore_then(just(Token::DoubleColon))
        .to(ast::Axis::Following);
    let namespace_axis = just(Token::Namespace)
        .ignore_then(just(Token::DoubleColon))
        .to(ast::Axis::Namespace);

    let element_forward_axis = choice::<_>([
        child_axis,
        descendant_axis,
        self_axis,
        descendant_or_self_axis,
        following_sibling_axis,
        following_axis,
        namespace_axis,
    ])
    .boxed();

    let forward_step_with_node_test_element_name = element_forward_axis
        .then(node_test_element_name.clone())
        .boxed();
    let forward_step_with_node_test_attribute_name = attribute_axis
        .then(node_test_attribute_name.clone())
        .boxed();

    let forward_step_with_node_test = forward_step_with_node_test_element_name
        .or(forward_step_with_node_test_attribute_name)
        .boxed();

    let abbrev_forward_step_attribute = just(Token::At)
        .ignore_then(node_test_attribute_name.map(|node_test| (ast::Axis::Attribute, node_test)));
    let abbrev_forward_step_element = node_test_element_name
        .map(|node_test| {
            // https://www.w3.org/TR/xpath-31/#abbrev
            let axis = match &node_test {
                ast::NodeTest::KindTest(t) => match t {
                    ast::KindTest::Attribute(_) | ast::KindTest::SchemaAttribute(_) => {
                        ast::Axis::Attribute
                    }
                    ast::KindTest::NamespaceNode => ast::Axis::Namespace,
                    _ => ast::Axis::Child,
                },
                _ => ast::Axis::Child,
            };
            (axis, node_test)
        })
        .boxed();

    let abbrev_forward_step = abbrev_forward_step_attribute
        .or(abbrev_forward_step_element)
        .boxed();

    let forward_step = forward_step_with_node_test.or(abbrev_forward_step).boxed();

    let axis_node_test = reverse_step.or(forward_step).boxed();

    ParserAxisNodeTestOutput { axis_node_test }
}

#[derive(Clone)]
struct ParserSignatureOutput<'a, I>
where
    I: ValueInput<'a, Token = Token<'a>, Span = Span>,
{
    param_list: BoxedParser<'a, I, Vec<ast::Param>>,
    signature: BoxedParser<'a, I, ast::Signature>,
}

fn parser_signature<'a, I>(
    eqname: BoxedParser<'a, I, ast::NameS>,
    sequence_type: BoxedParser<'a, I, ast::SequenceType>,
) -> ParserSignatureOutput<'a, I>
where
    I: ValueInput<'a, Token = Token<'a>, Span = Span>,
{
    let type_declaration = just(Token::As).ignore_then(sequence_type.clone()).boxed();

    let param = just(Token::Dollar)
        .ignore_then(eqname.clone())
        .then(type_declaration.clone().or_not())
        .map(|(name, type_)| ast::Param {
            name: name.value,
            type_,
        })
        .boxed();

    let param_list = param
        .separated_by(just(Token::Comma))
        .collect::<Vec<_>>()
        .boxed();

    let signature_param = just(Token::Dollar)
        .ignore_then(eqname.clone())
        .then(type_declaration.clone())
        .map(|(name, type_)| ast::SignatureParam {
            name: name.value,
            type_,
        })
        .boxed();

    let signature_param_list = signature_param
        .separated_by(just(Token::Comma))
        .collect::<Vec<_>>()
        .boxed();

    let signature = eqname
        .clone()
        .then(signature_param_list.delimited_by(just(Token::LeftParen), just(Token::RightParen)))
        .then_ignore(just(Token::As))
        .then(sequence_type.clone())
        .map(|((name, params), return_type)| ast::Signature {
            name,
            params,
            return_type,
        })
        .boxed();

    ParserSignatureOutput {
        param_list,
        signature,
    }
}

#[derive(Clone)]
struct ParserPrimaryOutput<'a, I>
where
    I: ValueInput<'a, Token = Token<'a>, Span = Span>,
{
    literal: BoxedParser<'a, I, ast::PrimaryExprS>,
    var_ref: BoxedParser<'a, I, ast::PrimaryExprS>,
    context_item_expr: BoxedParser<'a, I, ast::PrimaryExprS>,
    named_function_ref: BoxedParser<'a, I, ast::PrimaryExprS>,
    string: BoxedParser<'a, I, Cow<'a, str>>,
}

fn parser_primary<'a, I>(eqname: BoxedParser<'a, I, ast::NameS>) -> ParserPrimaryOutput<'a, I>
where
    I: ValueInput<'a, Token = Token<'a>, Span = Span>,
{
    let string = select! {
        Token::StringLiteral(s) => s,
    }
    .boxed();
    let string_literal = string
        .clone()
        .map(|s| ast::Literal::String(s.to_string()))
        .boxed();

    let integer = select! {
        Token::IntegerLiteral(i) => i,
    };

    let integer_literal = integer.map(ast::Literal::Integer).boxed();

    let decimal_literal = select! {
        Token::DecimalLiteral(d) => d,
    }
    .map(ast::Literal::Decimal)
    .boxed();

    let double_literal = select! {
        Token::DoubleLiteral(d) => d,
    }
    .map(|d| ast::Literal::Double(OrderedFloat(d)))
    .boxed();

    let literal = string_literal
        .clone()
        .or(integer_literal.clone())
        .or(decimal_literal)
        .or(double_literal)
        .map_with_span(|literal, span| ast::PrimaryExpr::Literal(literal).with_span(span))
        .boxed();

    let var_ref = just(Token::Dollar)
        .ignore_then(eqname.clone())
        .map_with_span(|name, span| ast::PrimaryExpr::VarRef(name.value).with_span(span))
        .boxed();

    let context_item_expr = just(Token::Dot)
        .map_with_span(|_, span| ast::PrimaryExpr::ContextItem.with_span(span))
        .boxed();

    let named_function_ref = eqname
        .clone()
        .then_ignore(just(Token::Hash))
        .then(integer)
        .try_map(|(name, arity), span| {
            check_reserved(&name, span)?;
            Ok((name, arity))
        })
        .map_with_state(|(name, arity), span, state: &mut State| {
            ast::PrimaryExpr::NamedFunctionRef(ast::NamedFunctionRef {
                name: name.map(|name| {
                    name.with_default_namespace(state.namespaces.default_function_namespace)
                }),
                // TODO: handle overflow
                arity: arity.try_into().unwrap(),
            })
            .with_span(span)
        })
        .boxed();

    ParserPrimaryOutput {
        literal,
        var_ref,
        context_item_expr,
        named_function_ref,
        string,
    }
}

#[derive(Clone)]
struct ParserOutput<'a, I>
where
    I: ValueInput<'a, Token = Token<'a>, Span = Span>,
{
    #[cfg(test)]
    name: BoxedParser<'a, I, ast::NameS>,
    expr_single: BoxedParser<'a, I, ast::ExprSingleS>,
    signature: BoxedParser<'a, I, ast::Signature>,
    sequence_type: BoxedParser<'a, I, ast::SequenceType>,
    kind_test: BoxedParser<'a, I, ast::KindTest>,
    xpath: BoxedParser<'a, I, ast::XPath>,
}

fn parser<'a, I>() -> ParserOutput<'a, I>
where
    I: ValueInput<'a, Token = Token<'a>, Span = Span>,
{
    let ParserNameOutput {
        eqname,
        ncname,
        braced_uri_literal,
    } = parser_name();
